0.11

#8 Remove API's deprecated since 0.10

0.10

#5 FactoryConfigurationService refactoring
#6 Service/Module override support
#7 Start publishing Bootique to Maven central repo

0.9

#4 FactoryConfigurationService - support for loading parameterized types

0.8

#1 Merge bundles and modules into a single concept
#2 Auto-load extensions
#3 Create BootLogger outside DI, add "trace" logging