@@ -1,5 +1,7 @@
 package com.nhl.bootique;
 
+import java.time.Duration;
+
 import com.google.inject.Binder;
 import com.google.inject.Module;
 import com.google.inject.Singleton;
@@ -22,15 +24,20 @@ import com.nhl.bootique.jopt.OptionsProvider;
 import com.nhl.bootique.log.BootLogger;
 import com.nhl.bootique.run.DefaultRunner;
 import com.nhl.bootique.run.Runner;
+import com.nhl.bootique.shutdown.DefaultShutdownManager;
+import com.nhl.bootique.shutdown.ShutdownManager;
+import com.nhl.bootique.shutdown.ShutdownTimeout;
 
 public class BQCoreModule implements Module {
 
 	private String[] args;
 	private BootLogger bootLogger;
+	private Duration shutdownTimeout;
 
 	public BQCoreModule(String[] args, BootLogger bootLogger) {
 		this.args = args;
 		this.bootLogger = bootLogger;
+		this.shutdownTimeout = Duration.ofMillis(10000l);
 	}
 
 	@Override
@@ -40,6 +47,8 @@ public class BQCoreModule implements Module {
 		binder.bind(JacksonService.class).to(DefaultJacksonService.class);
 		binder.bind(String[].class).annotatedWith(Args.class).toInstance(args);
 		binder.bind(Runner.class).to(DefaultRunner.class).in(Singleton.class);
+		binder.bind(ShutdownManager.class).to(DefaultShutdownManager.class).in(Singleton.class);
+		binder.bind(Duration.class).annotatedWith(ShutdownTimeout.class).toInstance(shutdownTimeout);
 		binder.bind(Options.class).toProvider(OptionsProvider.class).in(Singleton.class);
 		binder.bind(ConfigurationSource.class).to(CliConfigurationSource.class).in(Singleton.class);
 
