@@ -11,6 +11,7 @@ import com.nhl.bootique.command.CommandOutcome;
 import com.nhl.bootique.jopt.Args;
 import com.nhl.bootique.log.BootLogger;
 import com.nhl.bootique.run.Runner;
+import com.nhl.bootique.shutdown.ShutdownManager;
 
 import joptsimple.OptionException;
 
@@ -24,7 +25,7 @@ public class BQRuntime {
 	public BQRuntime(Injector injector) {
 		this.injector = injector;
 	}
-	
+
 	public BootLogger getBootLogger() {
 		return injector.getInstance(BootLogger.class);
 	}
@@ -39,6 +40,33 @@ public class BQRuntime {
 
 	public String getArgsAsString() {
 		return Arrays.asList(getArgs()).stream().collect(joining(" "));
+	}
+
+	/**
+	 * Registers a JVM shutdown hook that is delegated to
+	 * {@link ShutdownManager}.
+	 * 
+	 * @since 0.11
+	 */
+	public void addJVMShutdownHook() {
+
+		// resolve all Injector services needed for shutdown eagerly and outside
+		// shutdown thread to ensure that shutdown hook will not fail due to
+		// misconfiguration, etc.
+
+		ShutdownManager shutdownManager = injector.getInstance(ShutdownManager.class);
+		BootLogger logger = getBootLogger();
+
+		Runtime.getRuntime().addShutdownHook(new Thread("bootique-shutdown") {
+
+			@Override
+			public void run() {
+				shutdownManager.shutdown().forEach((s, th) -> {
+					logger.stderr(String.format("Error performing shutdown of '%s': %s", s.getClass().getSimpleName(),
+							th.getMessage()));
+				});
+			}
+		});
 	}
 
 	public CommandOutcome run() {
