@@ -1,6 +1,7 @@
 0.11
 
 #8 Remove API's deprecated since 0.10
+#10 Service shutdown functionality
 
 0.10
 
